# ubidots-cli

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  Makefile  README.md  pages-v1-migration-spec.md  plan.md  pyproject.toml  pytest.ini  tox.ini
cli/: compat.py  main.py  settings.py
cli/apps/: commands.py  constants.py  enums.py  executor.py  handlers.py  models.py  validators.py
cli/apps/schemas/: default_menu_v2.xml  tree_menu_v2.dtd
cli/apps/tests/: test_commands.py  test_validators.py
cli/apps/tests/fixtures/: menu_invalid.xml  menu_valid.xml
cli/commons/: decorators.py  enums.py  exceptions.py  formatters.py  helpers.py  helpers_tests.py  models.py  pipelines.py  settings.py  styles.py  utils.py  utils_tests.py  validators.py
cli/commons/engines/docker/: client.py  container.py  network.py
cli/commons/tests/: test_formatters.py  test_pipelines.py
cli/config/: commands.py  handlers.py  helpers.py  models.py  utils.py
cli/config/tests/: test_commands.py  test_handlers.py  test_helpers.py  tests_utils.py
cli/devices/: commands.py  handlers.py  helpers.py
cli/devices/tests/: test_commands.py
cli/functions/: __init__.py  commands.py  constants.py  enums.py  exceptions.py  executor.py  handlers.py  helpers.py  models.py  pipelines.py  utils.py  validators.py
cli/functions/engines/: enums.py  exceptions.py  helpers.py  manager.py  models.py  settings.py  validators.py
cli/functions/engines/abstracts/: client.py  clients.py  container.py  image.py  network.py  validators.py
cli/functions/engines/docker/: client.py  container.py  helpers.py  image.py  models.py  network.py  validators.py
cli/functions/engines/podman/: client.py  container.py  helpers.py  image.py  network.py  validators.py
cli/functions/engines/tests/: test_models.py
cli/functions/lambda_handlers/: handler.mjs  handler.py  main.mjs  main.py
cli/functions/tests/: test_commands.py  test_executor.py  test_pipelines.py  test_utils.py  tests_utils.py  tests_validators.py
cli/pages/: __init__.py  commands.py  constants.py  exceptions.py  executor.py  handlers.py  helpers.py  models.py  pipelines.py  server.py
cli/pages/engines/: __init__.py  enums.py  exceptions.py  helpers.py  manager.py  settings.py
cli/pages/engines/abstracts/: __init__.py  client.py  container.py  network.py
cli/pages/engines/docker/: Dockerfile  README.md  __init__.py  build_image.py  client.py  container.py  image.py  network.py  validators.py
cli/pages/engines/templates/: copy_watcher.py  flask_manager.py  hot_reload_server.py  page_server.py
cli/pages/pipelines/: __init__.py  cloud_crud.py  dev_engine.py  dev_scaffold.py  sync.py
cli/pages/templates/: index.html.template  ubidots-page.html.template
cli/pages/tests/: test_cloud_commands.py  test_commands.py  test_dev_commands.py  test_dev_engine_steps.py  test_dev_scaffold_workspace.py  test_exceptions.py  test_executor.py  test_handlers.py  test_helpers.py  test_imports.py  test_models.py  test_pipelines.py  test_pull_workspace.py  test_sync_commands.py
cli/pages/tests/engines/: test_helpers.py  test_manager.py
cli/variables/: commands.py  enums.py  handlers.py  helpers.py
cli/variables/tests/: test_commands.py
docs/: pages-development.md
docs/development/: architecture.md  argo-integration-state.md  modules.md  pages-argo-migration-status.md  pages-argo-migration-story.md  pages-manual-qa.md  pages-upgrade-compatibility.md
my_page/: .manifest.yaml  body.html  manifest.toml
my_page/static/: data.js
some-other-page/: .manifest.yaml  script.js  style.css
