[tool.poetry]
name = "ubidots-cli"
version = "2.0.0"
description = "A powerful CLI tool for efficient management and automation of cloud-based resources."
authors = ["Ubidots <devel@ubidots.com>", "crubio <cristian.rubio@ubidots.com>", "Juan David <juan.david@ubidots.com>"]
readme = "README.md"
packages = [
    { include = "cli"}
]

[tool.poetry.scripts]
ubidots = "cli.main:app"

[tool.poetry.dependencies]
click = ">=8.1.0"
python = ">=3.9,<3.15"
typer = "^0.15.0"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
requests = "^2.31.0"
inquirerpy = "^0.3.4"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
docker = "^7.0.0"
podman = "^4.9.0"
croniter = "^2.0.1"
httpx = "^0.27.0"
tomli = "^2.2.1"
tomli-w = "^1.2.0"
jinja2 = "^3.1.6"
psutil = "^5.9.0"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
simplification = ["simplification"]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^24.1.0"
pep8 = "^1.7.1"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
autoflake = "^2.2.1"
isort = "^5.13.2"
ruff = "^0.15.5"
tox = "^4.18"
mypy = "^1.11.1"
types-PyYAML = "^6.0.12.20240808"
types-requests = "^2.32.0.20241016"
respx = "^0.22.0"

[tool.isort]
force_single_line = true
line_length = 123

[tool.ruff]
target-version = "py313"
line-length = 123

[tool.ruff.lint]
ignore = [
  "RUF001",
  "RUF012",
  "PLC1901",
  "COM812",
  "PLC0415",  # conditional imports inside try/except blocks (valid pattern)
  "EM101",    # exception string literals (pre-existing style)
  "EM102",    # exception f-string literals (pre-existing style)
  "INP001",   # implicit namespace packages (pre-existing structure)
  "TC001",    # move import into TYPE_CHECKING block (pre-existing)
  "UP036",    # version block check in compat.py is intentional (supports Python 3.9+)
  "UP042",    # StrEnum backport in compat.py is intentional (supports Python 3.9/3.10)
]
select = [
  "E",
  "F",
  "W",
  "C4",
  "RUF",
  "UP",
  "B",
  "EM",
  "RET",
  "FLY",
  "SIM",
  "PERF",
  "ICN",
  "YTT",
  "ASYNC",
  "TID",
  "Q",
  "PYI",
  "FA",
  "T10",
  "PLC",
  "PLE",
  "ISC",
  "G",
  "INP",
  "PIE",
  "RSE",
  "TCH",
  "INT",
  "COM",
  "SLOT",
]
